# bookmark-manager

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.js
.cargo/: config.toml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 0.Y_0odEGB.css
.svelte-kit/output/client/_app/immutable/chunks/: 0pz69QBQ.js  BkpGC-QU.js  CXppdvkx.js  D2uxtCFl.js  D3dHuVIH.js  DWJ3NdWv.js  LPgFSd4K.js  ZcDgc31X.js
.svelte-kit/output/client/_app/immutable/entry/: app.Ds0fIt2S.js  start.DfcppEoz.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.y5k4E45w.js  1.CbGJeUUy.js  2.BpWaVkXm.js
.svelte-kit/output/prerendered/pages/: index.html
.svelte-kit/output/server/: manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _layout.tNj0RQ_y.css  _page.orc2AxIE.css
.svelte-kit/output/server/chunks/: index.js  internal.js
.svelte-kit/output/server/entries/pages/: _layout.ts.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src/: App.svelte  app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: ImportExport.ts  bookmarkStore.ts
src/routes/: +layout.svelte  +page.svelte
